--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -24,6 +24,14 @@
   items:
     - name: Planera och designa
       items:
+        - name: Planera för distribution av Azure Files
+          href: storage-files-planning.md
+        - name: Så här distribuerar du Azure Files
+          href: storage-files-deployment-guide.md
+        - name: Planera för distribution av Azure File Sync
+          href: storage-sync-files-planning.md
+        - name: Så här distribuerar du Azure File Sync
+          href: storage-sync-files-deployment-guide.md
         - name: Replikering
           href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Mål för skalbarhet och prestanda
@@ -60,6 +68,10 @@
           href: ../common/storage-azure-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure CLI 1.0
           href: ../common/storage-azure-cli-nodejs.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Registrera en server med Azure File Sync
+          href: storage-sync-files-server-registration.md
+        - name: Lägga till en serverslutpunkt för Azure File Sync
+          href: storage-sync-files-server-endpoint.md
         - name: Använd Storage Explorer med Azure File Storage
           href: ../../vs-azure-tools-storage-explorer-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure Automation
@@ -68,6 +80,8 @@
       items:
         - name: Säkerhetsguide
           href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: Konfigurera brandväggar och virtuella nätverk
+          href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Kryptering för vilande data
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Kräv säker överföring
@@ -82,12 +96,16 @@
           href: storage-troubleshoot-windows-file-connection-problems.md
         - name: Felsöka Azure Files-anslutningar – Linux
           href: storage-troubleshoot-linux-file-connection-problems.md
+        - name: Felsök Azure File Sync
+          href: storage-sync-files-troubleshoot.md
         - name: Självstudie om felsökning
           href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 'Övervaka, diagnostisera och felsöka'
           href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Mått och loggning
           items:
+            - name: Azure Storage-mått i Azure Monitor
+              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
             - name: Lagringsanalys
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
             - name: Aktivera och visa mått
