--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -62,6 +62,8 @@
       items:
         - name: Säkerhetsguide
           href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: Konfigurera brandväggar och virtuella nätverk
+          href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Kryptering av klientsidan
           items:
             - name: .NET
@@ -86,6 +88,8 @@
           href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Mått och loggning
           items:
+            - name: Azure Storage-mått i Azure Monitor
+              href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Lagringsanalys
               href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
             - name: Aktivera och visa mått
