--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -1,4 +1,5 @@
 - name: Dokumentation om App Service
+  href: index.yml
 - name: Översikt
   items:
     - name: Om Web Apps
@@ -64,6 +65,8 @@
       href: app-service-hybrid-connections.md
     - name: Traffic Manager-integrering
       href: web-sites-traffic-manager.md
+    - name: Lokal cache
+      href: app-service-local-cache-overview.md
 - name: Instruktionsguider
   items:
     - name: Konfigurera app
