--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -226,6 +226,13 @@
       items:
         - name: Löpande export
           href: app-insights-export-telemetry.md
+          items:
+            - name: Kodexempel
+              items:
+                - name: Exportera till SQL med Stream Analytics
+                  href: app-insights-code-sample-export-sql-stream-analytics.md
+                - name: Exportera till Stream Analytics
+                  href: app-insights-export-stream-analytics.md
         - name: Exportera datamodell
           href: app-insights-export-data-model.md
         - name: Exportera till Power BI
