--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -172,22 +172,34 @@
           href: control-flow-expression-language-functions.md
         - name: Systemvariabler
           href: control-flow-system-variables.md
-    - name: Lagra autentiseringsuppgifter i nyckelvalvet
-      href: store-credentials-in-key-vault.md
+    - name: Säkerhet
+      items:
+        - name: Säkerhetsöverväganden vid dataflytt
+          href: data-movement-security-considerations.md
+        - name: Spara autentiseringsuppgifter i Azure Key Vault
+          href: store-credentials-in-key-vault.md
+        - name: Kryptera autentiseringsuppgifter för lokal Integration Runtime
+          href: encrypt-credentials-self-hosted-integration-runtime.md
     - name: Övervaka och hantera
       items:
         - name: Använda .NET
           href: 'quickstart-create-data-factory-dot-net.md#monitor-pipeline-run'
         - name: Använda Azure Monitor
           href: monitor-using-azure-monitor.md
+        - name: Hantera Azure SSIS Integration Runtime
+          href: manage-azure-ssis-integration-runtime.md
+        - name: Övervaka Integration Runtime
+          href: monitor-integration-runtime.md
     - name: Skapa integration runtime
       items:
         - name: Azure integration runtime
           href: create-azure-integration-runtime.md
-        - name: Azure SSIS integration runtime
-          href: create-azure-ssis-integration-runtime.md
         - name: Lokal IR
           href: create-self-hosted-integration-runtime.md
+        - name: Azure SSIS Integration Runtime
+          href: create-azure-ssis-integration-runtime.md
+        - name: Anslut Azure-SSIS Integration Runtime till ett virtuellt nätverk
+          href: join-azure-ssis-integration-runtime-virtual-network.md
 - name: Referens
   items:
     - name: .NET
@@ -200,6 +212,8 @@
       href: /python/api/overview/azure/datafactory?view=azure-python
 - name: Resurser
   items:
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: frequently-asked-questions.md
     - name: Azure-översikt
       href: 'https://azure.microsoft.com/roadmap/?category=analytics'
     - name: Priser
