open localization: commit translated files

--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -24,6 +24,8 @@
   items:
     - name: Textanalys med Power BI
       href: Tutorials/tutorial-power-bi-key-phrases.md
+    - name: Textanalys i PowerApps
+      href: 'https://powerapps.microsoft.com/tutorials/cognitive-services-api/'
 - name: Instruktionsguider
   items:
     - name: Registrera dig
