--- a/articles/application-insights/toc.yml
+++ b/articles/application-insights/toc.yml
@@ -117,6 +117,8 @@
               href: app-insights-snapshot-debugger.md
         - name: J2EE
           items:
+            - name: Eclipse
+              href: app-insights-java-eclipse.md
             - name: Loggspårningar
               href: app-insights-java-trace-logs.md
             - name: Unix-mått
@@ -138,6 +140,8 @@
               href: app-insights-proactive-failure-diagnostics.md
             - name: Prestandaavvikelser
               href: app-insights-proactive-performance-diagnostics.md
+        - name: Dynamics CRM
+          href: app-insights-sample-mscrm.md
         - name: Skapa en resurs
           href: app-insights-create-new-resource.md
     - name: Analysera
@@ -146,7 +150,7 @@
           items:
             - name: Instrumentpaneler
               href: app-insights-dashboards.md
-            - name: Search
+            - name: Söka
               href: app-insights-diagnostic-search.md
             - name: Mått
               href: app-insights-metrics-explorer.md
